RESOLVED FIXED89602
[BlackBerry] No longer need to use a long whitelist to disable security check
https://bugs.webkit.org/show_bug.cgi?id=89602
Summary [BlackBerry] No longer need to use a long whitelist to disable security check
Yong Li
Reported 2012-06-20 14:13:00 PDT
SecurityOrigin::grantUniversalAccess() should be good enough
Attachments
the patch (1.96 KB, patch)
2012-06-22 10:02 PDT, Yong Li
no flags
updated (2.07 KB, patch)
2012-06-22 10:38 PDT, Yong Li
no flags
Yong Li
Comment 1 2012-06-22 10:02:25 PDT
Created attachment 149047 [details] the patch
Yong Li
Comment 2 2012-06-22 10:38:39 PDT
Rob Buis
Comment 3 2012-06-22 10:41:08 PDT
Comment on attachment 149053 [details] updated LGTM.
WebKit Review Bot
Comment 4 2012-06-22 11:40:36 PDT
Comment on attachment 149053 [details] updated Clearing flags on attachment: 149053 Committed r121045: <http://trac.webkit.org/changeset/121045>
WebKit Review Bot
Comment 5 2012-06-22 11:40:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.