[BlackBerry] Set WebSecurityEnabled flag accordingly. https://bugs.webkit.org/show_bug.cgi?id=89602

Patch by Yong Li <yoli@rim.com> on 2012-06-22
Reviewed by Rob Buis.

Disable web security checks if needed.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::init):
(BlackBerry::WebKit::WebPagePrivate::didChangeSettings):

Canonical link: https://commits.webkit.org/107624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121045 268f45cc-cd09-0410-ab3c-d52691b4dbfc